<resources>
    <string name="app_name">Fitness App</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_map">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_maps_key">AIzaSyDZoFlzBbWRkdcCln7nunqQGFFdkozUI5c</string>
    <string name="menu_add_exercises">Add Exercises</string>
    <string name="rap_music">Hip-Hop Music</string>
    <string name="pop_music">Pop Music</string>
    <string name="rock_music">Rock Music</string>
    <string name="electronic_music">Electronic Music</string>
    <string name="chill_music">Chill Music</string>
    <string name="music">Music</string>
    <string name="music1">Music</string>
    <string name="rnb_music">RnB Music</string>
    <string name="musiclistactivity">MusicListActivity</string>
</resources>